Refactor tests to use `LangUtil.EMPTY_BYTE_ARRAY`, update assertions, and remove unused imports and annotations.